# EdgeVoiceRAG

./: README.md
automotive_edge_rag/cpp/: CMakeLists.txt  demo_main.cpp  edge_llm_rag_system.cpp  edge_llm_rag_system.h  query_classifier.cpp  query_classifier.h
automotive_edge_rag/models/onnx/: config.json  model.onnx  model_O4.onnx  model_qint8_avx512_vnni.onnx  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.txt
automotive_edge_rag/models/openvino/: openvino_model.xml
automotive_edge_rag/python/: interactive_search.py  run_demo.py  vehicle_data_processor.py  vehicle_manual_data.txt  vehicle_vector_search.py
automotive_edge_rag/python/vector_db/: index_info.json  similarity_matrix.npy  vehicle_data.json  vehicle_data.pkl  vehicle_embeddings.npy
automotive_edge_rag/python_cpp/: CMakeLists.txt  persistent_search_cli.cpp
llm/test/: CMakeLists.txt  llm_test.cpp
voice/sherpa-onnx/dotnet-examples/: sherpa-onnx.sln
voice/sherpa-onnx/dotnet-examples/keyword-spotting-from-files/: Program.cs  keyword-spotting-from-files.csproj
voice/sherpa-onnx/dotnet-examples/keyword-spotting-from-microphone/: Program.cs  keyword-spotting-from-microphone.csproj
voice/sherpa-onnx/dotnet-examples/kokoro-tts/: Program.cs  kokoro-tts.csproj
voice/sherpa-onnx/dotnet-examples/kokoro-tts-play/: Program.cs  kokoro-tts-play.csproj
voice/sherpa-onnx/dotnet-examples/offline-decode-files/: Program.cs  offline-decode-files.csproj
voice/sherpa-onnx/dotnet-examples/offline-speaker-diarization/: Program.cs  offline-speaker-diarization.csproj
voice/sherpa-onnx/dotnet-examples/offline-tts/: Program.cs  offline-tts.csproj
voice/sherpa-onnx/dotnet-examples/offline-tts-play/: Program.cs  offline-tts-play.csproj
voice/sherpa-onnx/dotnet-examples/online-decode-files/: Program.cs
voice/sherpa-onnx/dotnet-examples/speaker-identification/: Program.cs  speaker-identification.csproj
voice/sherpa-onnx/dotnet-examples/speech-enhancement-gtcrn/: Program.cs  speech-enhancement-gtcrn.csproj
voice/sherpa-onnx/dotnet-examples/speech-recognition-from-microphone/: Program.cs  speech-recognition-from-microphone.csproj
voice/sherpa-onnx/dotnet-examples/spoken-language-identification/: Program.cs  spoken-language-identification.csproj
voice/sherpa-onnx/dotnet-examples/streaming-hlg-decoding/: Program.cs  streaming-hlg-decoding.csproj
